# workCheckList

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  logging_conf.py  main.py
app/db/: __init__.py  base.py  certificates.py  checklists.py  classes.py  faq.py  popcorn.py  posters.py  schedule.py  users.py
app/handlers/: certificates.py  checklists.py  classes.py  faq.py  popcorn.py  posters.py  schedule.py  start.py
app/services/: auth.py  popcorn.py  qr.py  scheduler.py
app/ui/: labels.py
app/utils/: common.py
bot/: config.py  keyboards.py  main.py
bot/handlers/: admin.py  common.py  states.py  worker.py
bot/services/: database.py
deploy/raspberrypi/: README.md  install_service.sh  setup_pi.sh
deploy/systemd/: workchecklist-bot.service
docs/: telegram_bot_architecture_ru.md
scripts/: run_bot.sh
