[project]
name = "work-checklist-bot"
version = "0.1.0"
description = "Telegram bot for cinema workers checklists"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.4.1,<4",
  "aiosqlite>=0.20.0,<1",
  "python-dotenv>=1.0.1,<2"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
